# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  README.md
docs/: collision.md
src/: button.cpp  button.h  button_state.h  collision.cpp  collision.h  config.h  controller.cpp  controller.h  direction_rules.cpp  direction_rules.h  food_placer.cpp  food_placer.h  food_safety.cpp  food_safety.h  game.cpp  game.h  game_lifecycle.cpp  game_lifecycle.h  game_outcome.cpp  game_outcome.h  game_validation.cpp  game_validation.h  growth_tracker.cpp  growth_tracker.h  main.cpp  pause_state.cpp  pause_state.h  renderer.cpp  renderer.h  score_tracker.cpp  score_tracker.h  snake.cpp  snake.h  snake_state.cpp  snake_state.h  update_guard.cpp  update_guard.h
tests/: CMakeLists.txt  test_collision.cpp  test_direction_rules.cpp  test_food_placer.cpp  test_food_safety.cpp  test_game_lifecycle.cpp  test_game_outcome.cpp  test_game_simulation.cpp  test_game_validation.cpp  test_growth_tracker.cpp  test_helpers.h  test_pause_state.cpp  test_score_tracker.cpp  test_snake_state.cpp  test_update_guard.cpp
